# prj-meteo-rag

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: API_REFERENCE.md  API_REFERENCE_v2.md  PULL_REQUEST_TEMPLATE.md  SPRINTS.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  data_quality.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  data-quality.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  SPRINTS.md
helm/meteorag/: Chart.yaml  values.prod.yaml  values.yaml
helm/meteorag/templates/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
monitoring/grafana/: dashboard.json
monitoring/prometheus/: rules.yaml
scripts/: debug_api.py  debug_inmet.py  health_check.py  seed_data.py  test_openmeteo.py
src/agents/: meteo_agent.py
src/data/: inmet.py  open_meteo.py
src/llm/: claude.py
src/meteorag/: __init__.py  config.py  logging.py  metrics.py
src/meteorag/api/: __init__.py  inmet_client.py  openmeteo_client.py
src/meteorag/llm/: __init__.py  client.py
src/meteorag/rag/: __init__.py  chunker.py  pipeline.py  retriever.py
src/meteorag/ui/: __init__.py  app.py
src/rag/: document.py  retriever.py  store.py
tests/: conftest.py  test_agent.py  test_inmet.py  test_open_meteo.py  test_rag.py
tests/integration/: __init__.py  test_rag_pipeline.py
tests/unit/: __init__.py  test_chunker.py  test_circuit_breaker.py  test_inmet_client.py  test_llm_client.py  test_logging.py  test_metrics.py  test_openmeteo_client.py  test_retriever.py
